Vitis_HLS/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp.clang-tidy.loop-label.out.log
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:1335:7: warning: Added loop label VITIS_LOOP_1213_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1213_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:1335:7: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2309:5: warning: Added loop label VITIS_LOOP_676_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_676_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2309:5: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2323:5: warning: Added loop label VITIS_LOOP_690_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_690_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2323:5: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2337:5: warning: Added loop label VITIS_LOOP_704_1:   [xilinx-label-all-loops]
    for (unsigned i = low; i != high; ++i) {
    ^~~
    VITIS_LOOP_704_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:2337:5: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:3936:7: warning: Added loop label VITIS_LOOP_1247_1:   [xilinx-label-all-loops]
      for (i = 0; i < __N - 1; ++i) {
      ^~~
      VITIS_LOOP_1247_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:3936:7: note: FIX-IT applied suggested code changes
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:5760:9: error: Resource with core_name: RAM_T2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=h core=RAM_T2P_BRAM
        ^
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:5762:9: error: Resource with core_name: RAM_T2P_BRAM pragma is ignored, because this core doesn't exist at all  [clang-diagnostic-error]
#pragma HLS RESOURCE variable=mask core=RAM_T2P_BRAM
        ^
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:5804:25: warning: Added loop label VITIS_LOOP_220_1:   [xilinx-label-all-loops]
                        for (u32 i = 0; i < kernel_size; i++) {
                        ^~~
                        VITIS_LOOP_220_1: 
/home/dell3561-49/Vitis_HLS_folder/BackGroundRemoval/BackGrRemoval/solution1/.autopilot/db/BackGrRemoval.pp.0.cpp:5804:25: note: FIX-IT applied suggested code changes
